HTML/CSSから必要ない記述を削除

--- a/server/web/manager/templates/default.html
+++ b/server/web/manager/templates/default.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Super dry</title>
-  <link rel="stylesheet" href="">
+  <!-- Loading Bootstrap -->
+  <link href="/static/css/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Loading Flat UI -->
+  <link href="/static/css/flat-ui.min.css" rel="stylesheet">
+  <link href="/static/css/main.css" rel="stylesheet">
 </head>
+
 <body>
-  データがありません
+  <div class="container">
+    <header class="headline">
+      <h1 class="logo">
+        <i class="logo-image"></i>
+        Super dry
+        <small class="description">洗濯物の乾き時間がわかるかもしれないアプリ</small>
+      </h1>
+    </header>
+    <!-- /demo-headline -->
+    <main class="contents">
+      <p>データがありません</p>
+    </main>
+  </div>
 </body>
+
 </html>
