--- a/server/web/manager/templates/print_time.html
+++ b/server/web/manager/templates/print_time.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
-
   <title>Super dry</title>
-
   <!-- Loading Bootstrap -->
-  <link href="/static/dist/css/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+  <link href="/static/css/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Loading Flat UI -->
-  <link href="/static/dist/css/flat-ui.min.css" rel="stylesheet">
-  <link href="/static/dist/css/demo4.css" rel="stylesheet">
+  <link href="/static/css/flat-ui.min.css" rel="stylesheet">
+  <link href="/static/css/main.css" rel="stylesheet">
 </head>
+
 <body>
   <div class="container">
-    <div class="demo-headline">
-      <h1 class="demo-logo">
-        <div class="logo"></div>
+    <header class="headline">
+      <h1 class="logo">
+        <i class="logo-image"></i>
         Super dry
-        <small>洗濯物の乾き時間がわかるかもしれないアプリ</small>
+        <small class="description">洗濯物の乾き時間がわかるかもしれないアプリ</small>
       </h1>
-    </div> <!-- /demo-headline -->
-    気温：{{ sensor.temperature }}℃<br>
-    湿度：{{ sensor.humidity }}%<br>
-    あと{{ sensor.superdry_time }}分で乾くかもしれません
+    </header>
+    <!-- /demo-headline -->
+    <main class="contents">
+      <p class="current">{{ sensor.temperature }}℃ <i>/</i> {{ sensor.humidity }}%</p>
+      <p>あと{{ sensor.superdry_time }}分で乾くかもしれません</p>
+    </main>
   </div>
-
 </body>
+
 </html>
